[package]
name = "cbor-socket-example"
version = "0.1.0"
authors = ["jeff <jeff@agnos.is>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
crossbeam = "0.7"
thiserror = "1.0"